--- a/gtests/CMakeLists.txt
+++ b/gtests/CMakeLists.txt
@@ -12,6 +12,10 @@ if (APPLE)
 endif (APPLE)
 
 add_executable(big_integer_test
-        big_integers_test.cpp result_test.cpp)
+        big_integers_test.cpp)
+
+add_executable(result_test
+        result_test.cpp)
 
 target_link_libraries(big_integer_test gtest gtest_main)
+target_link_libraries(result_test gtest gtest_main)
