--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.9)
+include(GoogleTest)
 project(langford_godfrey)
+
+
+enable_testing()
+
 
 set(CMAKE_CXX_STANDARD 14)
 
