--- a/gtests/CMakeLists.txt
+++ b/gtests/CMakeLists.txt
@@ -1,8 +1,8 @@
 project (gtests)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
-
 add_subdirectory(googletest)
+
 
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
@@ -13,9 +13,16 @@ endif (APPLE)
 
 add_executable(big_integer_test
         big_integers_test.cpp)
+target_link_libraries(big_integer_test gtest gtest_main)
+gtest_add_tests(
+        TARGET      big_integer_test
+        TEST_SUFFIX .noArgs
+        TEST_LIST   noArgsTests)
 
 add_executable(result_test
         result_test.cpp)
-
-target_link_libraries(big_integer_test gtest gtest_main)
 target_link_libraries(result_test gtest gtest_main)
+gtest_add_tests(
+        TARGET      result_test
+        TEST_SUFFIX .noArgs
+        TEST_LIST   noArgsTests)
