--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 language: cpp
+before_install:
+  # C++14
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+  # Codecov
+  - sudo pip install codecov
+install: 
+  # C++14
+  - sudo apt-get install -qq g++-5
+  # Codecov
+  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
 compiler:
   - clang
   - gcc
@@ -7,3 +18,9 @@ script:
   - cd build
   - cmake .. && make
   - make test
+   # Codecov
+  - ./get_code_cov
+  - codecov
+after_success:
+  # Codecov
+  - bash <(curl -s https://codecov.io/bash)
