--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,11 @@ cmake_minimum_required(VERSION 3.9)
 include(GoogleTest)
 project(langford_godfrey)
 
+if(COVERAGE)
+    add_definitions( -fprofile-arcs -ftest-coverage )
+endif(COVERAGE)
 
 enable_testing()
-
 
 set(CMAKE_CXX_STANDARD 14)
 
