--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
 addons:
   sonarcloud:
-    organization: "langford_godfrey"
+    organization: "julienloiseau-github"
     token:
       secure: $SONAR_TOKEN
 script:
