Change big integers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,23 @@
 cmake_minimum_required(VERSION 3.9)
-include(GoogleTest)
 project(langford_godfrey)
+include(GoogleTest)
 set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_CXX_STANDARD 14)
 
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
 
 if(ENABLE_COVERAGE EQUAL ON)
     include(CodeCoverage)
     add_definitions( -fprofile-arcs -ftest-coverage )
     target_link_libraries(langford_godfrey gcov)
-
 endif()
 
 enable_testing()
-
-set(CMAKE_CXX_STANDARD 14)
-
 include_directories(src)
 
 # Tests
@@ -22,5 +25,4 @@ add_subdirectory(gtests)
 
 # Main executable
 add_executable(langford_godfrey
-        src/big_integers.hpp
-        src/main.cpp src/gray.hpp src/task.hpp src/instance.hpp)
+        src/main.cpp)
